qa/clinical-data/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: 'true'
  labels:
    app: clinical-data
  name: clinical-data
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clinical-data
  template:
    metadata:
      labels:
        app: clinical-data
    spec:
      imagePullSecrets:
        - name: images-pull
      volumes:
        - name: ca-certificate
          secret:
            secretName: ca-certificate
            defaultMode: 0555
      containers:
      - image: ferlabcrsj/cqdg-clinical-data-service:3b0bc2e65aee8df24512cdf55e71fb757d084864
        name: clinical-data
        volumeMounts:
          - name: ca-certificate
            mountPath: /opt/ca
            readOnly: true
        resources:
          requests:
            memory: "128Mi"
            cpu: '0.5'
          limits:
            memory: "256Mi"
            cpu: '1.0'
