qa/clinical-data/services.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: clinical-data
  name: clinical-data
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: clinical-data
