qa/clinical-data/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: clinical-data
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
      - clinical-data-api.qa.cqdg.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: clinical-data-api.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clinical-data
            servicePort: 4000
